# AI-on-GPU

./: CMakeLists.txt  compare.cpp  readme.md  suppe  suppe2  test.cpp  try.cpp
cl_math_lib/: cl_math_lib.cpp
cl_math_lib/programs/: conv_3d.cl  conv_3d_add.cl  conv_3d_add_bias.cl  conv_3d_bias.cl  mat_dyad.cl  mat_prod.cl  mat_prod_bias.cl  pooling_3d.cl  pooling_3d_avg.cl  pooling_3d_minmax.cl  vec_act.cl  vec_add.cl  vec_add_fct.cl  vec_add_fct_adam.cl  vec_copy.cl  vec_dw_mt.cl  vec_err.cl
config/: constants.h
layer/: basic_layer.cpp  conv2d_layer.cpp  dense_layer.cpp  dense_out.cpp  enums.cpp  pooling_layer.cpp
model/: model.cpp  stats.cpp
utils/: image_helper.cpp
